--- a/TalentShow/app/src/main/AndroidManifest.xml
+++ b/TalentShow/app/src/main/AndroidManifest.xml
@@ -1,25 +1,32 @@
+<?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.talentshow">
 
     <application
+        android:name=".App"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:name=".App"
         android:theme="@style/AppTheme">
-    <activity android:name=".presentation.ChooseRoleActivity" android:theme="@style/AppTheme">
+        <activity android:name=".presentation.CastingActivity">
 
-        <intent-filter>
-            <action android:name="android.intent.action.MAIN" />
-            <category android:name="android.intent.category.LAUNCHER" />
-        </intent-filter>
-    </activity>
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity
+            android:name=".presentation.ChooseRoleActivity"
+            android:theme="@style/AppTheme">
+
+        </activity>
         <activity android:name=".presentation.EmailEnterActivity" />
         <activity android:name=".presentation.EmailSuccessCodeActivity" />
-
-        <activity android:name=".presentation.ActivityProducerYes"></activity>
-        <activity android:name=".presentation.ActivityProducerName"></activity>
+        <activity android:name=".presentation.ActivityProducerYes" />
+        <activity android:name=".presentation.ActivityProducerName" />
     </application>
+
 </manifest>
