--- a/TalentShow/app/build.gradle
+++ b/TalentShow/app/build.gradle
@@ -64,4 +64,7 @@ dependencies {
     implementation 'com.squareup.retrofit2:retrofit:2.4.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.3.0'
 
+    //k4l-video-trimmer
+    implementation 'life.knowledge4:k4l-video-trimmer:1.0'
+
 }
