Beginning server work

--- a/TalentShow/app/build.gradle
+++ b/TalentShow/app/build.gradle
@@ -61,10 +61,14 @@ dependencies {
     annotationProcessor 'org.parceler:parceler:1.1.12'
 
     //Retrofit
-    implementation 'com.squareup.retrofit2:retrofit:2.4.0'
-    implementation 'com.squareup.retrofit2:converter-gson:2.3.0'
+    implementation 'com.squareup.retrofit2:retrofit:2.5.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.5.0'
+    implementation 'com.squareup.retrofit2:adapter-rxjava2:2.5.0'
 
     //k4l-video-trimmer
     implementation 'life.knowledge4:k4l-video-trimmer:1.0'
 
+    // RxJava 2
+    implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
+    implementation 'io.reactivex.rxjava2:rxjava:2.2.8'
 }
