--- a/TalentShow/app/build.gradle
+++ b/TalentShow/app/build.gradle
@@ -71,4 +71,7 @@ dependencies {
     // RxJava 2
     implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
     implementation 'io.reactivex.rxjava2:rxjava:2.2.8'
+
+    //RangeSeekBar
+    implementation 'com.crystal:crystalrangeseekbar:1.1.3'
 }
