--- a/TalentShow/app/src/main/AndroidManifest.xml
+++ b/TalentShow/app/src/main/AndroidManifest.xml
@@ -24,7 +24,9 @@
         <activity android:name=".presentation.star.ActivityStarVideoBest">
 
         </activity>
-        <activity android:name=".presentation.CastingActivity" />
+        <activity android:name=".presentation.CastingActivity"
+
+            />
         <activity
             android:name=".presentation.signing.ChooseRoleActivity"
             android:theme="@style/AppTheme">
@@ -36,7 +38,9 @@
         </activity>
         <activity android:name=".presentation.signing.EmailEnterActivity" />
         <activity android:name=".presentation.signing.EmailSuccessCodeActivity" />
-        <activity android:name=".presentation.producer.ActivityProducerYes" />
+        <activity android:name=".presentation.producer.ActivityProducerYes" >
+
+        </activity>
         <activity android:name=".presentation.producer.ActivityProducerName" />
         <activity android:name=".presentation.star.ActivityStarNameEnter" >
 
