--- a/TalentShow/app/build.gradle
+++ b/TalentShow/app/build.gradle
@@ -74,4 +74,7 @@ dependencies {
 
     //RangeSeekBar
     implementation 'com.crystal:crystalrangeseekbar:1.1.3'
+
+    //Cicerone
+    implementation 'ru.terrakok.cicerone:cicerone:5.0.0'
 }
