--- a/TalentShow/app/src/main/AndroidManifest.xml
+++ b/TalentShow/app/src/main/AndroidManifest.xml
@@ -24,21 +24,22 @@
         <activity android:name=".presentation.star.ActivityStarStatistics"></activity>
         <activity android:name=".presentation.star.ActivityStarVideoBest"></activity>
         <activity android:name=".presentation.CastingActivity">
+        </activity>
+        <activity
+            android:name=".presentation.signing.ChooseRoleActivity"
+            android:theme="@style/AppTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
-        <activity
-            android:name=".presentation.signing.ChooseRoleActivity"
-            android:theme="@style/AppTheme"></activity>
+            </intent-filter></activity>
         <activity android:name=".presentation.signing.EmailEnterActivity" />
         <activity android:name=".presentation.signing.EmailSuccessCodeActivity" />
         <activity android:name=".presentation.producer.ActivityProducerYes"></activity>
         <activity android:name=".presentation.producer.ActivityProducerName" />
         <activity android:name=".presentation.star.ActivityStarNameEnter"></activity>
         <activity android:name=".presentation.star.ActivityStarFileLoad" />
+        <activity android:name=".presentation.star.mainscreen.StarMainScreenActivity" />
     </application>
 
 </manifest>
