--- a/TalentShow/app/src/main/AndroidManifest.xml
+++ b/TalentShow/app/src/main/AndroidManifest.xml
@@ -28,18 +28,18 @@
         <activity android:name=".presentation.CastingActivity">
         </activity>
         <activity
-            android:name=".presentation.signing.ChooseRoleActivity"
+            android:name=".presentation.signing.rolechoice.ChooseRoleActivity"
             android:theme="@style/AppTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter></activity>
-        <activity android:name=".presentation.signing.EmailEnterActivity" />
-        <activity android:name=".presentation.signing.EmailSuccessCodeActivity" />
+        <activity android:name=".presentation.signing.emailenter.EmailEnterActivity" />
+        <activity android:name=".presentation.signing.emailcode.EmailSuccessCodeActivity" />
         <activity android:name=".presentation.producer.ActivityProducerYes"></activity>
         <activity android:name=".presentation.producer.ActivityProducerName" />
-        <activity android:name=".presentation.star.ActivityStarNameEnter"></activity>
+        <activity android:name=".presentation.signing.nameenter.ActivityStarNameEnter"></activity>
         <activity android:name=".presentation.star.fileload.ActivityStarFileLoad" />
         <activity android:name=".presentation.star.mainscreen.StarMainScreenActivity" />
     </application>
