--- a/TalentShow/app/src/main/AndroidManifest.xml
+++ b/TalentShow/app/src/main/AndroidManifest.xml
@@ -25,11 +25,7 @@
         android:theme="@style/AppTheme">
         <activity android:name=".presentation.star.ActivityStarStatistics"></activity>
         <activity android:name=".presentation.star.ActivityStarVideoBest"></activity>
-        <activity android:name=".presentation.CastingActivity">
-        </activity>
-        <activity
-            android:name=".presentation.signing.rolechoice.ChooseRoleActivity"
-            android:theme="@style/AppTheme">
+        <activity android:name=".presentation.CastingFragment">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER" />
@@ -39,9 +35,11 @@
         <activity android:name=".presentation.signing.emailcode.EmailSuccessCodeActivity" />
         <activity android:name=".presentation.producer.ActivityProducerYes"></activity>
         <activity android:name=".presentation.producer.ActivityProducerName" />
-        <activity android:name=".presentation.signing.nameenter.FragmentRegistration"></activity>
         <activity android:name=".presentation.star.fileload.ActivityStarFileLoad" />
-        <activity android:name=".presentation.star.mainscreen.StarMainScreenActivity" />
+        <activity android:name=".presentation.star.maincontainer.StarMainScreenActivity" />
+        <activity android:name=".presentation.signing.SplashActivity">
+
+        </activity>
     </application>
 
 </manifest>
