Various changes in Video Repository, and casting fragment

--- a/TalentShow/app/src/main/AndroidManifest.xml
+++ b/TalentShow/app/src/main/AndroidManifest.xml
@@ -30,7 +30,8 @@
         </activity>
         <activity android:name="com.avatar.ava.presentation.main.fragments.casting.CastingFragment">
         </activity>
-        <activity android:name="com.avatar.ava.presentation.main.MainScreenActivity" />
+        <activity android:name="com.avatar.ava.presentation.main.MainScreenActivity">
+        </activity>
         <activity android:name="com.avatar.ava.presentation.signing.EnterActivity">
 
         </activity>
