--- a/TalentShow/app/build.gradle
+++ b/TalentShow/app/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.application'
+apply plugin: 'com.google.gms.google-services'
 
 android {
     compileSdkVersion 29
@@ -30,6 +31,7 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    implementation 'com.google.firebase:firebase-analytics:17.3.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
@@ -85,7 +87,6 @@ dependencies {
     implementation 'androidx.navigation:navigation-ui:2.2.1'
 
 
-
     //Video Compressor
     implementation 'com.iceteck.silicompressorr:silicompressor:2.2.3'
 
@@ -97,4 +98,5 @@ dependencies {
 
     //ExoPlayer
     implementation 'com.google.android.exoplayer:exoplayer:2.11.3'
+    implementation 'com.google.firebase:firebase-core:17.0.1'
 }
