--- a/TalentShow/app/build.gradle
+++ b/TalentShow/app/build.gradle
@@ -9,8 +9,8 @@ android {
         applicationId "com.avatar.ava"
         minSdkVersion 21
         targetSdkVersion 29
-        versionCode 10
-        versionName "1.0.9"
+        versionCode 11
+        versionName "1.0.10"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
     compileOptions {
@@ -107,4 +107,6 @@ dependencies {
     //SwipeHolder
     implementation 'com.mindorks.android:placeholderview:1.0.3'
     annotationProcessor 'com.mindorks.android:placeholderview-compiler:1.0.3'
+
+    implementation 'com.google.firebase:firebase-messaging:20.1.6'
 }
