--- a/TalentShow/app/build.gradle
+++ b/TalentShow/app/build.gradle
@@ -54,6 +54,7 @@ dependencies {
 
     // Glide
     implementation 'com.github.bumptech.glide:glide:4.10.0'
+    annotationProcessor  'com.github.bumptech.glide:compiler:4.10.0'
 
     // MaterialDrawer
     implementation 'com.mikepenz:materialdrawer:6.1.2'
@@ -89,9 +90,6 @@ dependencies {
     implementation 'androidx.navigation:navigation-ui:2.2.1'
 
 
-    //Video Compressor
-    implementation 'com.iceteck.silicompressorr:silicompressor:2.2.3'
-
     //ffmpeg
     implementation 'com.arthenica:mobile-ffmpeg-min-gpl:4.3.1.LTS'
 
@@ -110,4 +108,10 @@ dependencies {
 
     implementation 'com.amplitude:android-sdk:2.9.2'
     implementation 'com.google.firebase:firebase-messaging:20.1.6'
+
+    implementation 'com.github.AbedElazizShe:LightCompressor:0.2.0'
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.3"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.3"
+
+    implementation 'net.ypresto.androidtranscoder:android-transcoder:0.2.0'
 }
