--- a/TalentShow/app/build.gradle
+++ b/TalentShow/app/build.gradle
@@ -114,4 +114,8 @@ dependencies {
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.3"
 
     implementation 'net.ypresto.androidtranscoder:android-transcoder:0.2.0'
+
+
+    implementation 'com.facebook.android:facebook-android-sdk:[5,6)'
+
 }
