--- a/TalentShow/app/build.gradle
+++ b/TalentShow/app/build.gradle
@@ -9,8 +9,8 @@ android {
         applicationId "com.avatar.ava"
         minSdkVersion 21
         targetSdkVersion 29
-        versionCode 28
-        versionName "1.1.9"
+        versionCode 29
+        versionName "1.2"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
     compileOptions {
@@ -116,6 +116,7 @@ dependencies {
     implementation 'net.ypresto.androidtranscoder:android-transcoder:0.2.0'
 
 
-    implementation 'com.facebook.android:facebook-android-sdk:[5,6)'
+    //implementation 'com.facebook.android:facebook-android-sdk:[5,6)'
+    implementation 'com.facebook.android:facebook-android-sdk:4.28.0'
 
 }
