--- a/TalentShow/app/build.gradle
+++ b/TalentShow/app/build.gradle
@@ -1,4 +1,7 @@
 apply plugin: 'com.android.application'
+apply plugin: 'kotlin-android'
+apply plugin: 'kotlin-android-extensions'
+apply plugin: 'kotlin-kapt'
 apply plugin: 'com.google.gms.google-services'
 apply plugin: 'com.google.firebase.crashlytics'
 
@@ -16,6 +19,9 @@ android {
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
+    }
+    kotlinOptions {
+        jvmTarget = '1.8'
     }
     buildTypes {
         release {
@@ -38,19 +44,25 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 
+    // Kotlin
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation 'androidx.core:core-ktx:1.3.2'
+
     // DI
-    implementation 'com.github.stephanenicolas.toothpick:toothpick-runtime:2.1.0'
-    implementation 'com.github.stephanenicolas.toothpick:smoothie:2.1.0'
-    annotationProcessor 'com.github.stephanenicolas.toothpick:toothpick-compiler:2.1.0'
+    implementation 'com.github.stephanenicolas.toothpick:toothpick-runtime:3.1.0'
+    implementation 'com.github.stephanenicolas.toothpick:smoothie:3.1.0'
+    implementation 'com.github.stephanenicolas.toothpick:ktp:3.1.0'
+    kapt 'com.github.stephanenicolas.toothpick:toothpick-compiler:3.1.0'
 
     // Moxy
     implementation 'tech.schoolhelper:moxy-x:1.7.0'
     implementation 'tech.schoolhelper:moxy-x-androidx:1.7.0'
-    annotationProcessor 'tech.schoolhelper:moxy-x-compiler:1.7.0'
+    kapt 'tech.schoolhelper:moxy-x-compiler:1.7.0'
 
     // Butterknife
     implementation 'com.jakewharton:butterknife:10.2.0'
-    annotationProcessor 'com.jakewharton:butterknife-compiler:10.2.0'
+    kapt 'com.jakewharton:butterknife-compiler:10.2.0'
 
     // Glide
     implementation 'com.github.bumptech.glide:glide:4.10.0'
@@ -64,7 +76,7 @@ dependencies {
 
     //Parcelable
     implementation 'org.parceler:parceler-api:1.1.12'
-    annotationProcessor 'org.parceler:parceler:1.1.12'
+    kapt 'org.parceler:parceler:1.1.12'
 
     //Retrofit
     implementation 'com.squareup.retrofit2:retrofit:2.5.0'
@@ -104,7 +116,7 @@ dependencies {
 
     //SwipeHolder
     implementation 'com.mindorks.android:placeholderview:1.0.3'
-    annotationProcessor 'com.mindorks.android:placeholderview-compiler:1.0.3'
+    kapt 'com.mindorks.android:placeholderview-compiler:1.0.3'
 
     implementation 'com.amplitude:android-sdk:2.9.2'
     implementation 'com.google.firebase:firebase-messaging:20.1.6'
@@ -116,7 +128,6 @@ dependencies {
     implementation 'net.ypresto.androidtranscoder:android-transcoder:0.2.0'
 
 
-    //implementation 'com.facebook.android:facebook-android-sdk:[5,6)'
     implementation 'com.facebook.android:facebook-android-sdk:4.28.0'
 
 }
